--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "This dataset is not in a tidy format. Why? Which of the five most common problems described by Wickhams is this an example of? Edit this cell and replace the text below with your response **(1 point)**:\n",
     "\n",
-    "> *replace this text with your response*"
+    "> multiple variables are stored in one column; gender and age in one column"
    ]
   },
   {
