--- a/Homework7.ipynb
+++ b/Homework7.ipynb
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "fitting-classification",
    "metadata": {},
    "outputs": [
@@ -1425,28 +1425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "accepted-saturday",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\n",
-       "\tOne Sample t-test\n",
-       "\n",
-       "data:  Boston$medv\n",
-       "t = 55.111, df = 505, p-value < 2.2e-16\n",
-       "alternative hypothesis: true mean is not equal to 0\n",
-       "95 percent confidence interval:\n",
-       " 21.72953 23.33608\n",
-       "sample estimates:\n",
-       "mean of x \n",
-       " 22.53281 \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in t.test(Boston$medv): Objekt 'Boston' nicht gefunden\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in t.test(Boston$medv): Objekt 'Boston' nicht gefunden\nTraceback:\n",
+      "1. t.test(Boston$medv)"
+     ]
     }
    ],
    "source": [
